--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
-    android:id="@+id/ic_menu_settings"
+    android:id="@+id/action_settings"
     android:icon="@drawable/ic_settings_white_24px"
     android:title="@string/main_settings_title"
     app:showAsAction="ifRoom"/>
