--- a/app/src/main/res/layout/activity_set_reminder.xml
+++ b/app/src/main/res/layout/activity_set_reminder.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sfikeni.remindmi.ui.SetReminderActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.sfikeni.remindmi.ui.SetReminderActivity">
 
-    <include android:id="@+id/set_reminder_toolbar"
+    <include
+        android:id="@+id/set_reminder_toolbar"
         layout="@layout/layout_toolbar" />
 
     <android.support.constraint.ConstraintLayout
@@ -16,7 +17,7 @@
         android:layout_below="@+id/set_reminder_toolbar">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout2"
+            android:id="@+id/reminder_title_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -27,25 +28,27 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/reminder_title_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/reminder_description_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.024"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_title_layout" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/reminder_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -55,10 +58,10 @@
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_description_label" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/reminder_set_date_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -68,10 +71,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.023"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText5" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_description_text" />
 
         <EditText
-            android:id="@+id/editText6"
+            android:id="@+id/reminder_set_date_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -81,10 +84,10 @@
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_set_date_label" />
 
         <EditText
-            android:id="@+id/editText7"
+            android:id="@+id/reminder_time_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -94,23 +97,10 @@
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText6" />
-
-        <EditText
-            android:id="@+id/editText8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:inputType="time"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText7" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_set_date_text" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/reminder_priority_spinner"
             android:layout_width="395dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -118,10 +108,10 @@
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText8" />
+            app:layout_constraintTop_toBottomOf="@+id/reminder_time_text" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/reminder_set_button"
             android:layout_width="177dp"
             android:layout_height="60dp"
             android:layout_marginBottom="8dp"
@@ -132,7 +122,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2"
+            app:layout_constraintTop_toBottomOf="@+id/reminder_priority_spinner"
             app:layout_constraintVertical_bias="0.13" />
 
     </android.support.constraint.ConstraintLayout>
