--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--text-->
-    <dimen name="text_large">54sp</dimen>
+    <dimen name="text_xxx_large">54sp</dimen>
     <dimen name="text_normal">14sp</dimen>
+    <dimen name="text_large">16sp</dimen>
 
     <!--elevations-->
     <dimen name="fab_elevation">6dp</dimen>
