--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sfikeni.remindmi.ui.MainActivity">
+    tools:context="com.example.sfikeni.remindmi.ui.activity.MainActivity"
+    tools:layout_editor_absoluteY="25dp">
 
-    <include layout="@layout/layout_toolbar"/>
+    <include layout="@layout/layout_toolbar" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/create_reminder_fab"
@@ -16,10 +17,20 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:theme="@style/FloatingActionButtonStyle"
-        app:rippleColor="@color/colorPrimaryDark"
         app:elevation="@dimen/fab_elevation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/colorPrimaryDark"
         app:srcCompat="@drawable/ic_alarm_add_white_24px" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="368dp"
+        android:layout_height="511dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
