--- a/app/src/main/res/layout/activity_set_reminder.xml
+++ b/app/src/main/res/layout/activity_set_reminder.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.sfikeni.remindmi.ui.SetReminderActivity">
+    tools:context="com.example.sfikeni.remindmi.ui.activity.SetReminderActivity">
 
     <include
         android:id="@+id/set_reminder_toolbar"
