--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         app:srcCompat="@drawable/ic_alarm_add_white_24px" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/reminders_recyclerview"
         android:layout_width="368dp"
         android:layout_height="511dp"
         android:layout_marginEnd="8dp"
@@ -31,6 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/list_item_reminder" />
 
 </android.support.constraint.ConstraintLayout>
