--- a/app/src/main/res/layout/list_item_reminder.xml
+++ b/app/src/main/res/layout/list_item_reminder.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/padding_normal">
+    android:padding="@dimen/padding_normal"
+    android:layout_margin="@dimen/margin_small"
+    app:cardElevation="@dimen/cardview_elevation">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -31,8 +33,6 @@
             android:layout_marginTop="32dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textSize="@dimen/text_normal"
-            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/reminder_status_indicator_image"
             app:layout_constraintHorizontal_bias="0.272"
             app:layout_constraintLeft_toLeftOf="parent"
