--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,11 @@
 
     <!--elevations-->
     <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="cardview_elevation">4dp</dimen>
 
     <!--padding-->
     <dimen name="padding_normal">8dp</dimen>
+
+    <!--margin-->
+    <dimen name="margin_small">4dp</dimen>
 </resources>
