--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sfikeni.remindmi.ui.activity.MainActivity"
+    tools:context="com.example.sfikeni.remindmi.ui.reminderList.MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
     <include layout="@layout/layout_toolbar" />
