--- a/app/src/main/res/layout/list_item_section_header.xml
+++ b/app/src/main/res/layout/list_item_section_header.xml
@@ -12,7 +12,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textColor="@color/text_black"
+        android:textColor="@color/colorBlackText"
         android:textSize="@dimen/text_normal"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
