--- a/app/src/main/res/layout/list_item_reminder.xml
+++ b/app/src/main/res/layout/list_item_reminder.xml
@@ -24,7 +24,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+            tools:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/reminder_item_title"
