--- a/app/src/main/res/layout/activity_reminder_details.xml
+++ b/app/src/main/res/layout/activity_reminder_details.xml
@@ -6,18 +6,69 @@
     android:layout_height="match_parent"
     tools:context="com.example.sfikeni.remindmi.ui.reminderdetails.ReminderDetailsActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <include android:id="@+id/toolbar_layout"
+        layout="@layout/layout_toolbar"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/title_cardview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        app:cardElevation="@dimen/cardview_elevation"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">
+
+        <TextView
+            android:id="@+id/reminder_detail_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Title" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/description_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="@dimen/cardview_elevation"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_cardview">
+
+        <TextView
+            android:id="@+id/reminder_detail_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Description" />
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/priority_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="@dimen/cardview_elevation"
+        android:layout_marginBottom="431dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Details Details" />
+        app:layout_constraintTop_toBottomOf="@+id/description_cardview">
+
+        <TextView
+            android:id="@+id/reminder_detail_priority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Priority : High" />
+
+    </android.support.v7.widget.CardView>
+
+
 </android.support.constraint.ConstraintLayout>
