--- a/app/src/main/res/layout/activity_reminder_details.xml
+++ b/app/src/main/res/layout/activity_reminder_details.xml
@@ -6,66 +6,102 @@
     android:layout_height="match_parent"
     tools:context="com.example.sfikeni.remindmi.ui.reminderdetails.ReminderDetailsActivity">
 
-    <include android:id="@+id/toolbar_layout"
-        layout="@layout/layout_toolbar"/>
+    <include
+        android:id="@+id/toolbar_layout"
+        layout="@layout/layout_toolbar" />
+
+    <TextView
+        android:id="@+id/detail_title_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder Title"
+        android:layout_margin="@dimen/margin_normal"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/title_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="@dimen/cardview_elevation"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:cardElevation="@dimen/cardview_elevation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">
+        app:layout_constraintTop_toBottomOf="@+id/detail_title_label">
 
         <TextView
             android:id="@+id/reminder_detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_normal"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/colorBlackText"
             tools:text="Title" />
     </android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/detail_description_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder Description"
+        android:layout_margin="@dimen/margin_normal"
+        app:layout_constraintTop_toBottomOf="@+id/title_cardview"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/description_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="@dimen/cardview_elevation"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:cardElevation="@dimen/cardview_elevation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_cardview">
+        app:layout_constraintTop_toBottomOf="@+id/detail_description_label">
 
         <TextView
             android:id="@+id/reminder_detail_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="false"
+            android:layout_margin="@dimen/margin_normal"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/colorBlackText"
             tools:text="Description" />
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/detail_priority_level_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Priority Level"
+        android:layout_margin="@dimen/margin_normal"
+        app:layout_constraintTop_toBottomOf="@+id/description_cardview"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/priority_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="@dimen/cardview_elevation"
-        android:layout_marginBottom="431dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardElevation="@dimen/cardview_elevation"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_cardview">
+        app:layout_constraintTop_toBottomOf="@+id/detail_priority_level_label">
 
         <TextView
             android:id="@+id/reminder_detail_priority"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_normal"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/colorBlackText"
             tools:text="Priority : High" />
 
     </android.support.v7.widget.CardView>
